--- a/includes/header.html
+++ b/includes/header.html
@@ -1,22 +1,22 @@
 <header class="site-header">
-  <div class="wrapper">
-    <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title }}</a>
-    
-    <nav class="site-nav">
-      <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-      <label for="nav-trigger">
-        <span class="menu-icon">
-          <i class="fas fa-bars"></i>
-        </span>
-      </label>
+    <div class="wrapper">
+        <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title }}</a>
+        <p class="site-subtitle">{{ site.description }}</p>
+        
+        <nav class="site-nav">
+            <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+            <label for="nav-trigger">
+                <span class="menu-icon">
+                    <i class="fas fa-bars"></i>
+                </span>
+            </label>
 
-      <div class="trigger">
-        <a class="page-link" href="/">Home</a>
-        <a class="page-link" href="/about">whoami</a>
-        <a class="page-link" href="/research">Research</a>
-        <a class="page-link" href="/writeups">Writeups</a>
-        <a class="page-link" href="/archive">Archive</a>
-      </div>
-    </nav>
-  </div>
+            <div class="trigger">
+                <a class="page-link {% if page.url == '/' %}active{% endif %}" href="/">posts</a>
+                <a class="page-link {% if page.url == '/about.html' %}active{% endif %}" href="/about">whoami</a>
+                <a class="page-link {% if page.url == '/tools.html' %}active{% endif %}" href="/tools">tools</a>
+                <a class="page-link {% if page.url == '/basics.html' %}active{% endif %}" href="/basics">basics</a>
+            </div>
+        </nav>
+    </div>
 </header>
