--- a/layouts/post.html
+++ b/layouts/post.html
@@ -2,16 +2,15 @@
 layout: default
 ---
 <article class="post">
-  <header>
-    <h1>{{ page.title }}</h1>
-    <p class="post-meta">
-      {{ page.date | date: "%b %-d, %Y" }}
-      {% if page.author %} •     {{ page.author }}{% endif %}
-      {% if page.categories %} • Category: {{ page.categories | join: ", " }}{% endif %}
-    </p>
-  </header>
+    <header>
+        <h1>{{ page.title }}</h1>
+        <div class="post-meta">
+            <span class="post-date">{{ page.date | date: "%d %b %Y" }}</span>
+            <span class="post-category">{{ page.categories | first }}</span>
+        </div>
+    </header>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+    <div class="post-content">
+        {{ content }}
+    </div>
 </article>
